@@ -17,6 +17,7 @@ Laurent Petit <laurent dot petit at gmail dot com>
 
 === Process Launcher
 - Fix an issue on OS X to preventively fix the PATH environement variable which is generally not even set with `/usr/local/bin` included. Fixes #709
+- Launching a new REPL now works similarly from within an editor or from the contextual menu of a clojure file: the editor content or file content is loaded, and the REPL switches to the corresponding namespace. Fixes #833
 
 == Counterclockwise 0.32.0
 
